New swagger file
